# V12

./: .gitattributes  .gitignore  .graphifyignore  Cargo.toml  README.md  V12-ECMA.md  V12-SPEED.md  V12-V8.md  disasm.wat  run_benchmarks.js
.agents/: AGENTS.md
benches/: Cargo.toml
benches/benches/: scripts.rs
crates/v12-cli/: Cargo.toml
crates/v12-cli/src/: main.rs  test262.rs
crates/v12-emitter/: Cargo.toml
crates/v12-emitter/src/: emitter.rs  lib.rs  types.rs
crates/v12-frontend/: Cargo.toml
crates/v12-frontend/src/: error.rs  lib.rs  parsed.rs
crates/v12-ir/: Cargo.toml
crates/v12-ir/src/: builder.rs  lib.rs  types.rs
crates/v12-lifter/: Cargo.toml
crates/v12-lifter/src/: ir_dump_test.rs  lib.rs  lifter.rs  scope.rs
crates/v12-runtime/: Cargo.toml
crates/v12-runtime/benches/: engine_bench.rs
crates/v12-runtime/src/: builtins.rs  engine.rs  event_loop.rs  js_value.rs  lib.rs  rt_functions.rs  runtime.rs
