[package]
name = "v12-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
v12-frontend  = { path = "../v12-frontend" }
v12-ir        = { path = "../v12-ir" }
v12-lifter    = { path = "../v12-lifter" }
v12-emitter   = { path = "../v12-emitter" }
wasmtime.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
icu = { version = "1.5", features = ["compiled_data"] }

[[bench]]
name = "engine_bench"
harness = false

[dev-dependencies]
criterion = { workspace = true }
